updated tooltips, adjusted padding to ensure tooltips show inside the container

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -441,108 +441,99 @@
     <main class="skills-main" id="skills-pages">
         <!--skills-->
 
-      <div class="skills-container">
+      <div class="skills-container"> 
         <div class="skills-grid skills-black-container">
           <div class="skills-row">
             <div class="skills skills4 skills-firstset tooltip" tabindex="0">
-              <h2 class="skills-text">SEO Optimization</h2>
-              <span class="tooltip-text">Proficient in optimizing websites for search engines using keyword research, on-page SEO, link building, and analytics tools like Google Search Console, SEMrush, and Google Analytics to boost visibility and rankings.</span>
+              <h2 class="skills-text">seo optimization</h2>
+              <span class="tooltip-text">Proficient in optimizing websites for search engines using keyword research, on-page SEO, structured data, and tools like Google Search Console, SEMrush, and Ahrefs.</span>
             </div>
             <div class="skills skills0 skills-firstset tooltip" tabindex="0">
-              <h2 class="skills-text">AI Content Creation</h2>
-              <span class="tooltip-text">Skilled in leveraging AI tools like ChatGPT and Jasper to create high-quality, SEO-friendly articles and content that engage audiences and enhance online presence.</span>
+              <h2 class="skills-text">ai content creation</h2>
+              <span class="tooltip-text">Skilled in using AI tools like ChatGPT to generate SEO-friendly articles, landing page copy, and content strategies tailored to target audiences.</span>
             </div>
             <div class="skills skills1 skills-firstset tooltip" tabindex="0">
-              <h2 class="skills-text">AI Image Generation</h2>
-              <span class="tooltip-text">Proficient in using AI image generation tools like Midjourney and DALL·E to create unique and high-quality images for websites, blogs, and social media, enhancing visual storytelling.</span>
+              <h2 class="skills-text">ai image generation</h2>
+              <span class="tooltip-text">Proficient in MidJourney and DALL·E to create unique, on-brand images for blogs, websites, and digital campaigns.</span>
             </div>
             <div class="skills-secondset skills2 tooltip" tabindex="0">
-              <h2 class="skills-text">AI Journalism</h2>
-              <span class="tooltip-text">Expert in utilizing AI for generating data-driven articles, automating content creation, and tailoring pieces for specific audiences, streamlining the journalistic process.</span>
+              <h2 class="skills-text">ai journalism</h2>
+              <span class="tooltip-text">Experienced in using AI to automate news writing, generate articles, and develop content workflows tailored for digital publishing and SEO.</span>
             </div>
-            <div class="skills-secondset skills3 tooltip" tabindex="0">
-              <h2 class="skills-text">Responsive Design</h2>
-              <span class="tooltip-text">Crafting flexible, mobile-first websites that adapt seamlessly to any screen size, ensuring optimal user experience across devices.</span>
+            <div class="skills-secondset skills3 tooltip skills" tabindex="0">
+              <h2 class="skills-text">responsive design</h2>
+              <span class="tooltip-text">Skilled in building mobile-first layouts that adapt to all screen sizes, ensuring fast load times and consistent UX across devices.</span>
             </div>
           </div>
           <div class="skills-row">
             <div class="skills skills4 skills-firstset tooltip" tabindex="0">
-              <h2 class="skills-text">HTML</h2>
-              <span class="tooltip-text">HTML is the standard markup language for documents designed to be displayed in a web browser.</span>
-            </div>
-            
-            <div class="skills skills5 skills-firstset tooltip" tabindex="0">
-              <h2 class="skills-text">UI/UX</h2>
-              <span class="tooltip-text">Skilled in designing intuitive, user-centric interfaces and seamless user experiences, focusing on accessibility, usability, and aesthetics for both web and mobile platforms.</span>
+              <h2 class="skills-text">html</h2>
+              <span class="tooltip-text">Experienced in writing semantic, accessible HTML to structure content effectively and enhance SEO and screen reader compatibility.</span>
             </div>
             <div class="skills skills5 skills-firstset tooltip" tabindex="0">
-              <h2 class="skills-text">CSS</h2>
-              <span class="tooltip-text">Expert in using CSS to create visually appealing, responsive, and interactive web layouts, ensuring consistent styling across devices and browsers.</span>
+              <h2 class="skills-text">ui/ux</h2>
+              <span class="tooltip-text">Specialized in designing user-friendly interfaces with a focus on usability, accessibility (WCAG), and brand-aligned experiences.</span>
+            </div>
+            <div class="skills skills5 skills-firstset tooltip" tabindex="0">
+              <h2 class="skills-text">css</h2>
+              <span class="tooltip-text">Expert in crafting responsive layouts, styling components, and creating smooth visual effects using modern CSS techniques.</span>
             </div>
             <div class="skills skills7 skills-firstset tooltip" tabindex="0">
-              <h2 class="skills-text">Midjourney</h2>
-              <span class="tooltip-text">Skilled in using Midjourney to generate AI-driven visual content, transforming creative concepts into stunning images for digital projects.</span>
+              <h2 class="skills-text">midjourney</h2>
+              <span class="tooltip-text">Experienced in using MidJourney to generate AI-driven visual content that supports branding, storytelling, and SEO imagery needs.</span>
             </div>
             <div class="skills skills8 skills-firstset tooltip" tabindex="0">
-              <h2 class="skills-text">Figma</h2>
-              <span class="tooltip-text">Proficient in using Figma to design user interfaces and prototypes, ensuring seamless collaboration and efficient design workflows.</span>
+              <h2 class="skills-text">figma</h2>
+              <span class="tooltip-text">Proficient in using Figma for UI design, wireframing, and collaboration on interactive, component-based layouts.</span>
             </div>
           </div>
           <div class="skills-row">
             <div class="skills skills9 skills-firstset tooltip" tabindex="0">
-              <h2 class="skills-text">Adobe Photoshop</h2>
-              <span class="tooltip-text">Expert in Adobe Photoshop for high-quality image editing, retouching, and creating visually compelling graphics for web and digital media.</span>
+              <h2 class="skills-text">adobe photoshop</h2>
+              <span class="tooltip-text">Advanced in photo editing, digital graphics, and UI asset creation for web, marketing, and product design workflows.</span>
             </div>
             <div class="skills skills10 skills-firstset tooltip" tabindex="0">
-              <h2 class="skills-text">Canva</h2>
-              <span class="tooltip-text">Proficient in Canva for creating visually appealing graphics, presentations, and social media content with ease and efficiency.</span>
+              <h2 class="skills-text">canva</h2>
+              <span class="tooltip-text">Skilled in using Canva for rapid design of social media assets, presentations, and promotional content with brand consistency.</span>
             </div>
             <div class="skills-secondset skills11 tooltip" tabindex="0">
-              <h2 class="skills-text">Web Development</h2>
-              <span class="tooltip-text">Skilled in building responsive, user-friendly websites using modern web technologies like HTML, CSS, JavaScript, and frameworks to deliver seamless digital experiences.</span>
+              <h2 class="skills-text">web development</h2>
+              <span class="tooltip-text">Experienced in developing responsive, interactive websites using HTML, CSS, JavaScript, and WordPress platforms.</span>
             </div>
             <div class="skills skills12 skills-firstset tooltip" tabindex="0">
-              <h2 class="skills-text">Python</h2>
-              <span class="tooltip-text">Proficient in Python for building scalable applications, data analysis, automation, and backend development, with a focus on clean, efficient code.</span>
+              <h2 class="skills-text">ai prompt engineering</h2>
+              <span class="tooltip-text">Proficient in designing and refining AI prompts for tools like ChatGPT and MidJourney to generate accurate, high-impact content and visuals.</span>
             </div>
             <div class="skills skills13 skills-firstset tooltip" tabindex="0">
-              <h2 class="skills-text">Wireframe</h2>
-              <span class="tooltip-text">Experienced in creating wireframes to structure user interfaces, ensuring intuitive layouts and a seamless user experience for web and mobile applications.</span>
+              <h2 class="skills-text">wireframe</h2>
+              <span class="tooltip-text">Experienced in creating wireframes to plan intuitive layouts and user flows, ensuring clarity and usability during early design stages.</span>
             </div>
           </div>
           <div class="skills-row">
             <div class="skills skills14 skills-firstset tooltip" tabindex="0">
-              <h2 class="skills-text">JavaScript</h2>
-              <span class="tooltip-text">Proficient in JavaScript for adding interactivity to websites, including dynamic content, form validation, animations, and enhancing overall user experience.</span>
+              <h2 class="skills-text">javascript</h2>
+              <span class="tooltip-text">Proficient in using JavaScript to enhance interactivity, manage dynamic content, and create a seamless front-end user experience.</span>
             </div>
             <div class="skills-secondset skills15 tooltip" tabindex="0">
-              <h2 class="skills-text">Front End</h2>
-              <span class="tooltip-text">Skilled in front-end development, utilizing HTML, CSS, and JavaScript to create visually appealing, user-friendly, and responsive web interfaces.</span>
+              <h2 class="skills-text">front end</h2>
+              <span class="tooltip-text">Experienced in front-end development, combining HTML, CSS, JavaScript, and responsive techniques to build polished interfaces.</span>
             </div>
             <div class="skills skills16 skills-firstset tooltip" tabindex="0">
-              <h2 class="skills-text">WordPress</h2>
-              <span class="tooltip-text">Proficient in using WordPress to design and develop dynamic websites with customizable themes, plugins, and content management features for seamless user experience.</span>
+              <h2 class="skills-text">wordpress</h2>
+              <span class="tooltip-text">Skilled in WordPress customization, theme development, and plugin integration to create dynamic, client-friendly websites.</span>
             </div>
             <div class="skills skills17 skills-firstset tooltip" tabindex="0">
-              <h2 class="skills-text">GitHub</h2>
-              <span class="tooltip-text">Experienced with GitHub for version control, collaboration, and managing code repositories, ensuring efficient team workflows and project management.</span>
+              <h2 class="skills-text">github</h2>
+              <span class="tooltip-text">Experienced in using GitHub for version control, collaboration, and managing codebases in multi-developer environments.</span>
             </div>
             <div class="skills-secondset skills18 tooltip" tabindex="0">
-              <h2 class="skills-text">Back End</h2>
-              <span class="tooltip-text">Proficient in server-side development, managing databases, and building APIs to create robust and scalable web applications.</span>
+              <h2 class="skills-text">back end</h2>
+              <span class="tooltip-text">Capable in back-end development, building and managing databases, APIs, and server-side logic for full-stack web applications.</span>
             </div>
           </div>
         </div>
-      </div> 
-      <div id="side-nav" class="hidden">
-      <ul>
-        <li><a href="/index.html">home</a></li>
-        <li><a href="/pages/collections.html">the "projects"</a></li>
-        <li><a href="/pages/about.html">the "about me"</a></li>
-        <li><a href="/pages/resume.html">the "resume"</a></li>
-        <li><a href="/pages/contact.html">contact me</a></li>
-      </ul>
-    </div>
+      </div>
+
       <div class="back-to-top">
         <button id="back-to-top" onclick="scrollToTop()">back to top</button>
       </div>   
