--- a/pages/project3/project3-intro.html
+++ b/pages/project3/project3-intro.html
@@ -78,89 +78,206 @@
 
     <noscript><link rel="stylesheet" href="/styles/styles-article.css"></noscript>
     <noscript><link rel="stylesheet" href="/styles/styles-global.css"></noscript>
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "CollectionPage",
-        "name": "Sports Tube Community Blog Project | AI Content & SEO Portfolio by Genny Allison",
-        "description": "Explore the Sports Tube Community Blog Project by AI Content Creator & SEO Specialist Genny Allison. This page introduces the AI-powered, SEO-optimized blog platform featuring user-submitted sports articles. Navigate to the full case study, PageSpeed 100/100 grade, wireframe, design concept, and final site launch.",
-        "url": "https://sports-tube-community.netlify.app/pages/project3/project3-intro.html",
-        "image": {
-          "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_1458,h_948/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif",
-          "width": 1458,
-          "height": 948,
-          "caption": "Hero image of the Sports Tube Community Blog Project showcasing AI-generated content and responsive design"
-        },
-        "hasPart": [
-          {
-            "@type": "WebPage",
-            "name": "The Grade | PageSpeed Insights 100/100",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-grade.html"
-          },
-          {
-            "@type": "WebPage",
-            "name": "The Case Study",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-casestudy.html"
-          },
-          {
-            "@type": "WebPage",
-            "name": "The Design Strategy",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-design.html"
-          },
-          {
-            "@type": "WebPage",
-            "name": "The Wireframe",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-wireframe.html"
-          },
-          {
-            "@type": "WebPage",
-            "name": "Final Website",
-            "url": "https://sports-tube-community.netlify.app/"
-          },
-          {
-            "@type": "ContactPage",
-            "name": "Contact Genny Allison",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-intro.html#author-bio"
-          }
-        ],
-        "creator": {
-          "@type": "Person",
-          "name": "Genny Allison",
-          "url": "https://gennyallison.netlify.app",
-          "sameAs": [
-            "https://www.linkedin.com/in/genny-allison/",
-            "https://github.com/Allison2002",
-            "https://x.com/allis78978",
-            "https://www.instagram.com/allison_stock_inc/"
-          ]
-        },
-        "publisher": {
-          "@type": "Organization",
-          "name": "Allison Stock Inc.",
-          "url": "https://gennyallison.netlify.app",
-          "logo": {
-            "@type": "ImageObject",
-            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_484,h_210/v1746550266/allisonstock-logo_xgohg9.avif",
-            "width": 484,
-            "height": 210
-          }
-        },
-        "datePublished": "2025-06-02",
-        "dateModified": "2025-06-02",
-        "inLanguage": "en",
-        "keywords": [
-          "AI content creator portfolio",
-          "SEO content specialist",
-          "PageSpeed 100 optimization",
-          "AI website development case study",
-          "responsive web design",
-          "Core Web Vitals optimization",
-          "SEO strategy portfolio",
-          "user-generated sports blog"
-        ]
+    <style>
+      picture {
+        width: 100%;
+        display: block;
+        margin: 0 auto;
       }
-    </script>
+
+      img {
+        width: 100%;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+        padding: 0.25em;
+      }
+
+      .canvas-skills-grid {
+        display: flex;
+        flex-direction: row;
+        align-items: stretch;
+        width: 100%;
+        max-width: 100vw;
+        background-color: #000;
+        overflow: hidden;
+        box-sizing: border-box;
+        padding: 0.5rem;
+        contain: layout paint style;
+        aspect-ratio: 1904 / 502;
+      }
+      
+
+      .canvas-skills-grid picture {
+        flex: 0 0 40%;
+        max-width: 40%;
+        display: flex;
+        align-items: stretch;
+        justify-content: center;
+        background-color: #000;
+        box-sizing: border-box;
+        height: auto;
+        aspect-ratio: 1458 / 948;
+      }
+
+      .canvas-skills-grid img {
+        object-position: center;
+        border-top: 1em solid #000;
+        border-left: 1em solid #000;
+        border-right: 0.5em solid #000;
+        border-bottom: 1em solid #000;
+        will-change: transform;
+      }
+
+      img {
+        display: block;
+      }
+
+      img[fetchpriority="high"] {
+        contain: layout paint;
+        content-visibility: auto;
+      }
+
+      /* === TEXT CONTAINER === */
+      .canvas-skills-title {
+        flex: 0 0 60%;
+        max-width: 60%;
+        min-width: 60%;
+        background-color: #fff;
+        border: 1em solid #000;
+        border-left: 0.5em solid #000;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: stretch;
+        height: auto;
+      }
+
+      .canvas-skills-title h1,
+      .canvas-skills-title h2 {
+        font-family: Georgia, 'Times New Roman', serif;
+        font-weight: normal;
+        font-style: normal;
+        text-align: center;
+        line-height: 1.4;
+        font-display: swap;
+        height: auto;
+        margin: 0;
+      }
+
+      .canvas-skills-title h1 {
+        font-size: clamp(1.5rem, 4vw, 6rem);
+        line-height: 1.8;
+        height: auto;
+        overflow: hidden;
+      }
+
+      .canvas-skills-title h2 {
+        font-size: clamp(1.1rem, 3vw, 3rem);
+        line-height: 1.5;
+        height: auto;
+        overflow: hidden;
+      }
+
+
+      /* === MEDIA QUERIES === */
+
+      /* Tablets: 941px–1024px */
+      @media (min-width: 769px) and (max-width: 1024px) {
+        .canvas-skills-grid {
+          padding: 0.4rem;2
+        }
+
+        .canvas-skills-grid img {
+          border-width: 0.5em;
+        }
+
+        .canvas-skills-title {
+          height: 100%;
+          border-width: 0.5em;
+        }
+      }
+
+
+      /* Mobile landscape & phablets: 481px–768px */
+      @media (min-width: 481px) and (max-width: 768px) {
+        .canvas-skills-grid {
+          padding: 0.3rem;
+        }
+
+        .canvas-skills-grid picture {
+          max-width: 40%;
+        }
+
+        .canvas-skills-grid img {
+          border-width: 0.5em;
+        }
+
+        .canvas-skills-title {
+          min-height: 180px;
+          padding: 0.5rem;
+          border-width: 0.5em;
+        }
+
+        .canvas-skills-title h1 {
+          font-size: 2.2rem;
+        }
+
+        .canvas-skills-title h2 {
+          font-size: 1.5rem;
+        }
+      }
+
+      /* Smallest mobile screens ≤ 480px */
+      @media (max-width: 480px) {
+        .canvas-skills-grid {
+          padding: 0.25rem;
+          height: 200px;
+          width: 480px;  
+        }
+
+        .canvas-skills-grid img {
+          border-width: 0.5em;
+          object-fit: cover;
+          min-height: 168px;
+          object-position: center top;
+
+        }
+
+        .canvas-skills-title {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          min-height: 168px;
+          border-width: 0.5em;
+          width: 100%;
+          max-width: 480px;
+          height: auto;
+          padding-right: 0;
+          margin: 0 auto;
+        }
+
+        .canvas-skills-title h1 {
+          font-size: 1.1rem;
+          height: auto;
+          width: 100%;
+          line-height: 1.6;
+          margin: 0 auto;
+          padding: 0;
+        }
+
+        .canvas-skills-title h2 {
+          font-size: 1rem;
+          height: auto;
+          width: 100%;
+          line-height: 1.5;
+          margin: 0 auto;
+          padding: 0;
+        }
+      }
+
+    </style>
 
     <script type="application/ld+json">
       {
@@ -554,11 +671,11 @@
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_640,h_234,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
-              width="320" 
-              height="234" 
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_1664,h_730,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
+              width="832" 
+              height="365" 
               alt="Photo of Genny Allison, the web developer and AI content specialist"
-              style="object-fit: contain;"
+              style="object-fit: contain; aspect-ratio: 832 / 365"
               loading="auto" 
               decoding="async" 
             />
@@ -596,100 +713,102 @@
     <div>
       <button class="back-to-top" id="back-to-top" class="hidden">back to top</button>
     </div>
-      <footer id="nav">
-        <div class="footer-logo">
-          <picture> 
-            <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_768,h_330,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-              type="image/avif"
-              media="(min-width: 1200px)"
-              sizes="100vw"
-            />
-            <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_752,h_328,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-              type="image/avif"
-              media="(min-width: 481px) and (max-width: 1199px)"
-              sizes="100vw"
-            />
-            <img       
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_317,h_136,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-              alt="Allison Stock Inc. logo representing Genny Allison’s AI-powered web development and SEO services"
-              width="317"
-              height="136"
-              loading="lazy"
-              fetchpriority="low"
-              decoding="async" 
-              style="object-fit: cover; aspect-ratio: 317 / 136;"
-            />
-          </picture>
-        </div>
-        <div class="footer-links" id="footer-links">
-          <ul>
-            <li><a href="/index.html" class="links">my home</a></li>           
-            <li><a href="/pages/about.html" class="links">about me</a></li>
-            <li><a href="/pages/skills.html" class="links">my skills</a></li>
-            <li><a href="/pages/resume.html" class="links">my resume</a></li>
-            <li><a href="/pages/collections.html" class="links">my work</a></li> 
-            <li><a href="/pages/project3/project3-intro.html#author-bio" class="links">contact me</a></li>
-          </ul>
-        </div>
-        <div class="social-media">
-          <ul>
-            <li>
-              <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
-                <img src="/img/x-bird-icon.webp" 
-                  alt="X (Twitter) logo"
-                  width="32"
-                  height="32"
-                  loading="auto"  
-                  style="object-fit: contain;"
-                  fetchpriority="auto"
-                  decoding="async"
-                >
-              </a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
-                <img src="/img/ig-icon.webp" 
-                  alt="Instagram logo"
-                  width="32"
-                  height="32"
-                  loading="auto"  
-                  style="object-fit: contain;"
-                  fetchpriority="auto"
-                  decoding="async"
-                >
-              </a>
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
-                <img src="/img/linkedin-icon.webp" 
-                  alt="LinkedIn logo"
-                  width="32"
-                  height="32"
-                  loading="auto"  
-                  style="object-fit: contain;"
-                  fetchpriority="auto"
-                  decoding="async"
-                >
-              </a>
-            </li>
-            <li>
-              <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
-                <img src="/img/github-icon.avif" 
-                  alt="GitHub logo"
-                  width="32"
-                  height="32"
-                  loading="auto"  
-                  style="object-fit: contain;"
-                  fetchpriority="auto"
-                  decoding="async"
-                >
-              </a>
-            </li>
-          </ul>
-        </div>
-      </footer>
+    <footer id="nav">
+      <div class="footer-logo">
+        <picture> 
+          <source
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_768,h_330,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+            type="image/avif"
+            media="(min-width: 1200px)"
+            sizes="100vw"
+          />
+          <source
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_752,h_328,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+            type="image/avif"
+            media="(min-width: 481px) and (max-width: 1199px)"
+            sizes="100vw"
+          />
+          <img       
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_317,h_136,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+            alt="Allison Stock Inc. logo representing Genny Allison’s AI-powered web development and SEO services"
+            width="317"
+            height="136"
+            loading="lazy"
+            fetchpriority="low"
+            decoding="async" 
+            style="object-fit: cover; aspect-ratio: 317 / 136;"
+          />
+        </picture>
+      </div>
+      <div class="footer-links" id="footer-links">
+        <ul>
+          <li><a href="/index.html" class="links">my home</a></li>           
+          <li><a href="/pages/about.html" class="links">about me</a></li>
+          <li><a href="/pages/skills.html" class="links">my skills</a></li>
+          <li><a href="/pages/resume.html" class="links">my resume</a></li>
+          <li><a href="/pages/collections.html" class="links">my work</a></li> 
+          <li><a href="/pages/project3/project3-the-design.html#author-bio" class="links">contact me</a></li>
+        </ul>
+      </div>
+      <div class="social-media">
+        <ul>
+          <li>
+            <a href="https://x.com/allis78978" aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
+              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_120,h_120/v1750186687/x-bird-icon_hptlvt.webp" 
+                alt="X (Twitter) logo"
+                width="40"
+                height="40"
+                loading="auto"  
+                style="object-fit: contain; aspect-ratio: 40 / 40"
+                fetchpriority="auto"
+                decoding="async"
+              >
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/allison_stock_inc/"  aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
+              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_120,h_120/v1750186686/ig-icon_loetwi.webp" 
+                alt="Instagram logo"
+                width="40"
+                height="40"
+                loading="auto"  
+                style="object-fit: contain; aspect-ratio: 40 / 40"
+                fetchpriority="auto"
+                decoding="async"
+              >
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/genny-allison/"  aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
+              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_120,h_120/v1750186686/linkedin-icon_a07bb2.webp" 
+                alt="LinkedIn logo"
+                width="40"
+                height="40"
+                loading="auto"  
+                style="object-fit: contain; aspect-ratio: 40 / 40"
+                fetchpriority="auto"
+                decoding="async"
+              >
+            </a>
+          </li>
+          <li>
+            <a 
+              href="https://github.com/Allison2002" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
+              <img 
+                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_120,h_120/v1750186686/github-icon_kully4.png" 
+                alt="GitHub logo"
+                width="40"
+                height="40"
+                loading="auto"  
+                style="object-fit: contain; aspect-ratio: 40 / 40"
+                fetchpriority="auto"
+                decoding="async"
+              />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
     <script src="/assets/script.js" defer></script>
   </body>
 </html>      
