--- a/pages/project2/project2-the-grade.html
+++ b/pages/project2/project2-the-grade.html
@@ -775,11 +775,11 @@
             sizes="100vw"
           />
           <img 
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_640,h_234,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
-            width="320" 
-            height="234" 
-            alt="Logo for Allison Stock Inc., the personal brand of Genny Allison"
-            style="object-fit: contain;"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_1664,h_730,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
+            width="832" 
+            height="365" 
+            alt="Photo of Genny Allison, the web developer and AI content specialist"
+            style="object-fit: contain; aspect-ratio: 832 / 365"
             loading="auto" 
             decoding="async" 
           />
@@ -816,100 +816,102 @@
     <div>
       <button class="back-to-top" id="back-to-top" class="hidden">back to top</button>
     </div>
-      <footer id="nav">
-        <div class="footer-logo">
-          <picture> 
-            <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_768,h_330,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-              type="image/avif"
-              media="(min-width: 1200px)"
-              sizes="100vw"
-            />
-            <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_752,h_328,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-              type="image/avif"
-              media="(min-width: 481px) and (max-width: 1199px)"
-              sizes="100vw"
-            />
-            <img       
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_317,h_136,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-              alt="Allison Stock Inc. logo representing Genny Allison’s AI-powered web development and SEO services"
-              width="317"
-              height="136"
-              loading="lazy"
-              fetchpriority="low"
-              decoding="async" 
-              style="object-fit: cover; aspect-ratio: 317 / 136;"
-            />
-          </picture>
-        </div>
-        <div class="footer-links" id="footer-links">
-          <ul>
-            <li><a href="/index.html" class="links">my home</a></li>           
-            <li><a href="/pages/about.html" class="links">about me</a></li>
-            <li><a href="/pages/skills.html" class="links">my skills</a></li>
-            <li><a href="/pages/resume.html" class="links">my resume</a></li>
-            <li><a href="/pages/collections.html" class="links">my work</a></li> 
-            <li><a href="/pages/project2/project2-the-grade.html#author-bio" class="links">contact me</a></li>
-          </ul>
-        </div>
-        <div class="social-media">
-          <ul>
-            <li>
-              <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
-                <img src="/img/x-bird-icon.webp" 
-                  alt="X (Twitter) logo"
-                  width="32"
-                  height="32"
-                  loading="auto"  
-                  style="object-fit: contain;"
-                  fetchpriority="auto"
-                  decoding="async"
-                >
-              </a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
-                <img src="/img/ig-icon.webp" 
-                  alt="Instagram logo"
-                  width="32"
-                  height="32"
-                  loading="auto"  
-                  style="object-fit: contain;"
-                  fetchpriority="auto"
-                  decoding="async"
-                >
-              </a>
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
-                <img src="/img/linkedin-icon.webp" 
-                  alt="LinkedIn logo"
-                  width="32"
-                  height="32"
-                  loading="auto"  
-                  style="object-fit: contain;"
-                  fetchpriority="auto"
-                  decoding="async"
-                >
-              </a>
-            </li>
-            <li>
-              <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
-                <img src="/img/github-icon.avif" 
-                  alt="GitHub logo"
-                  width="32"
-                  height="32"
-                  loading="auto"  
-                  style="object-fit: contain;"
-                  fetchpriority="auto"
-                  decoding="async"
-                >
-              </a>
-            </li>
-          </ul>
-        </div>
-      </footer>
+    <footer id="nav">
+      <div class="footer-logo">
+        <picture> 
+          <source
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_768,h_330,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+            type="image/avif"
+            media="(min-width: 1200px)"
+            sizes="100vw"
+          />
+          <source
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_752,h_328,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+            type="image/avif"
+            media="(min-width: 481px) and (max-width: 1199px)"
+            sizes="100vw"
+          />
+          <img       
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_317,h_136,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+            alt="Allison Stock Inc. logo representing Genny Allison’s AI-powered web development and SEO services"
+            width="317"
+            height="136"
+            loading="lazy"
+            fetchpriority="low"
+            decoding="async" 
+            style="object-fit: cover; aspect-ratio: 317 / 136;"
+          />
+        </picture>
+      </div>
+      <div class="footer-links" id="footer-links">
+        <ul>
+          <li><a href="/index.html" class="links">my home</a></li>           
+          <li><a href="/pages/about.html" class="links">about me</a></li>
+          <li><a href="/pages/skills.html" class="links">my skills</a></li>
+          <li><a href="/pages/resume.html" class="links">my resume</a></li>
+          <li><a href="/pages/collections.html" class="links">my work</a></li> 
+          <li><a href="/pages/project3/project3-the-design.html#author-bio" class="links">contact me</a></li>
+        </ul>
+      </div>
+      <div class="social-media">
+        <ul>
+          <li>
+            <a href="https://x.com/allis78978" aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
+              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_120,h_120/v1750186687/x-bird-icon_hptlvt.webp" 
+                alt="X (Twitter) logo"
+                width="40"
+                height="40"
+                loading="auto"  
+                style="object-fit: contain; aspect-ratio: 40 / 40"
+                fetchpriority="auto"
+                decoding="async"
+              >
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/allison_stock_inc/"  aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
+              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_120,h_120/v1750186686/ig-icon_loetwi.webp" 
+                alt="Instagram logo"
+                width="40"
+                height="40"
+                loading="auto"  
+                style="object-fit: contain; aspect-ratio: 40 / 40"
+                fetchpriority="auto"
+                decoding="async"
+              >
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/genny-allison/"  aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
+              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_120,h_120/v1750186686/linkedin-icon_a07bb2.webp" 
+                alt="LinkedIn logo"
+                width="40"
+                height="40"
+                loading="auto"  
+                style="object-fit: contain; aspect-ratio: 40 / 40"
+                fetchpriority="auto"
+                decoding="async"
+              >
+            </a>
+          </li>
+          <li>
+            <a 
+              href="https://github.com/Allison2002" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
+              <img 
+                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_120,h_120/v1750186686/github-icon_kully4.png" 
+                alt="GitHub logo"
+                width="40"
+                height="40"
+                loading="auto"  
+                style="object-fit: contain; aspect-ratio: 40 / 40"
+                fetchpriority="auto"
+                decoding="async"
+              />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
     <script src="/assets/script.js" defer></script>
   </body>
 </html>      
