--- a/pages/project4/project4-the-casestudy.html
+++ b/pages/project4/project4-the-casestudy.html
@@ -579,6 +579,47 @@
               rel="noopener noreferrer" aria-label="Visit Genny Allison's professional portfolio on a new tab"
               >portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to see how I can help bring your vision to life.</p>
         </div>
+      </div><div class="author-bio-container fancy-border-img" id="author-bio">
+        <picture> 
+          <source
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_1664,h_730,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+            type="image/avif"
+            media="(min-width: 1200px)"
+            sizes="100vw"
+          />
+          <source
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_904,h_396,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+            type="image/avif"
+            media="(min-width: 481px) and (max-width: 1199px)"
+            sizes="100vw"
+          />
+          <img 
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_1664,h_730,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
+            width="832" 
+            height="365" 
+            alt="Photo of Genny Allison, the web developer and AI content specialist"
+            style="object-fit: contain; aspect-ratio: 832 / 365"
+            loading="auto" 
+            decoding="async" 
+          />
+        </picture> 
+        <div class="author-bio-text">
+          <h3>Partner with an AI Content Creator & SEO Specialist</h3>
+          <p><i>If you’re seeking a detail-oriented professional who combines creativity, data-driven strategy, and technical skill to deliver exceptional digital content—your search ends here.</i></p>
+          <p>My name is Genny Allison, and through <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and SEO-focused website development. Using advanced tools such as ChatGPT, MidJourney, Figma, and Uizard, I craft optimized content and designs that align with both search engine standards and user experience expectations.</p>
+          <p>My portfolio showcases how I blend innovation with strategy to create high-performing, visually engaging, and accessible websites. Each project reflects a deep understanding of SEO best practices, AI-assisted workflows, and the importance of performance, responsiveness, and clarity in modern web design.</p>
+
+          <p>Connect with me on 
+            <a href="https://www.linkedin.com/in/genny-allison/" 
+              target="_blank" 
+              rel="noopener noreferrer" 
+              aria-label="Visit Genny Allison's LinkedIn on a new tab">LinkedIn
+            </a>, explore my 
+            <a href="https://gennyallison.netlify.app"
+              target="_blank" 
+              rel="noopener noreferrer" aria-label="Visit Genny Allison's professional portfolio on a new tab"
+              >portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to see how I can help bring your vision to life.</p>
+        </div>
       </div>
     </main>
     <div id="side-nav" class="hidden">
@@ -596,31 +637,6 @@
     </div>
     <footer id="nav">
       <div class="footer-logo">
-        <picture> 
-          <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_768,h_330,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-            type="image/avif"
-            media="(min-width: 1200px)"
-            sizes="100vw"
-          />
-          <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_752,h_328,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-            type="image/avif"
-            media="(min-width: 481px) and (max-width: 1199px)"
-            sizes="100vw"
-          />
-          <img       
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_484,h_210,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-            alt="Photo of Genny Allison, the web developer and AI content specialist"
-            width="242"
-            height="105"
-            loading="lazy"
-            fetchpriority="low"
-            decoding="async" 
-            style-"object-fit: cover;"
-          />
-        </picture>
-      </div><div class="footer-logo">
         <picture> 
           <source
             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_768,h_330,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
@@ -653,61 +669,63 @@
           <li><a href="/pages/skills.html" class="links">my skills</a></li>
           <li><a href="/pages/resume.html" class="links">my resume</a></li>
           <li><a href="/pages/collections.html" class="links">my work</a></li> 
-          <li><a href="/pages/project3/project3-the-casestudy.html#author-bio" class="links">contact me</a></li>
+          <li><a href="/pages/project3/project3-the-design.html#author-bio" class="links">contact me</a></li>
         </ul>
       </div>
       <div class="social-media">
         <ul>
           <li>
-            <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
-              <img src="/img/x-bird-icon.webp" 
+            <a href="https://x.com/allis78978" aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
+              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_120,h_120/v1750186687/x-bird-icon_hptlvt.webp" 
                 alt="X (Twitter) logo"
-                width="32"
-                height="32"
+                width="40"
+                height="40"
                 loading="auto"  
-                style="object-fit: contain;"
+                style="object-fit: contain; aspect-ratio: 40 / 40"
                 fetchpriority="auto"
                 decoding="async"
               >
             </a>
           </li>
           <li>
-            <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
-              <img src="/img/ig-icon.webp" 
+            <a href="https://www.instagram.com/allison_stock_inc/"  aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
+              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_120,h_120/v1750186686/ig-icon_loetwi.webp" 
                 alt="Instagram logo"
-                width="32"
-                height="32"
+                width="40"
+                height="40"
                 loading="auto"  
-                style="object-fit: contain;"
+                style="object-fit: contain; aspect-ratio: 40 / 40"
                 fetchpriority="auto"
                 decoding="async"
               >
             </a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
-              <img src="/img/linkedin-icon.webp" 
+            <a href="https://www.linkedin.com/in/genny-allison/"  aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
+              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_120,h_120/v1750186686/linkedin-icon_a07bb2.webp" 
                 alt="LinkedIn logo"
-                width="32"
-                height="32"
+                width="40"
+                height="40"
                 loading="auto"  
-                style="object-fit: contain;"
+                style="object-fit: contain; aspect-ratio: 40 / 40"
                 fetchpriority="auto"
                 decoding="async"
               >
             </a>
           </li>
           <li>
-            <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
-              <img src="/img/github-icon.avif" 
+            <a 
+              href="https://github.com/Allison2002" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
+              <img 
+                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_120,h_120/v1750186686/github-icon_kully4.png" 
                 alt="GitHub logo"
-                width="32"
-                height="32"
+                width="40"
+                height="40"
                 loading="auto"  
-                style="object-fit: contain;"
+                style="object-fit: contain; aspect-ratio: 40 / 40"
                 fetchpriority="auto"
                 decoding="async"
-              >
+              />
             </a>
           </li>
         </ul>
