removed aspect ratio from hero

--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -449,7 +449,7 @@
             alt="Welcome to Tech Trends hero image, a SEO optimized website showcasing a modern, futuristic design with technology vibes"
             width="164"
             height="100"
-            style="object-fit: cover; aspect-ratio: 164 / 100"
+            style="object-fit: cover"
             fetchpriority="high"
             loading="eager"
             decoding="async"
